--- a/html/view/选择器.html
+++ b/html/view/选择器.html
@@ -92,7 +92,7 @@
         p:first-child{display: inline-block}
         p:last-child{}
         p:nth-child(5){} /*括号了是an+b*/
-        p:first-of-type{}
+        p:first-of-type{visibility: hidden}
         p:last-of-type{}
         p:nth-last-of-type(5){} /*括号了是an+b*/
         div::first-letter{}
