--- a/html/view/center.html
+++ b/html/view/center.html
@@ -46,6 +46,24 @@
             vertical-align: middle;
         }
 
+        .outer4{
+            width: 400px;
+            height: 400px;
+            background: #bbffaa;
+            position: relative;
+        }
+
+        .inner4{
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
         .img1 {
             width: 100px;
             height: 100px;
@@ -85,6 +103,10 @@
 <div class="outer3">
     <span class="inner3">出来玩啊？</span>
     <img class="img1" src="../image/block_show.jpg">
+</div>
+<hr>
+<div class="outer4">
+    <span class="inner4">inner</span>
 </div>
 <hr>
 <div class="d1">
