--- a/html/view/选择器.html
+++ b/html/view/选择器.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>选择器</title>
     <style>
+        @media print {
+
+        }
+        @media screen {
+
+        }
         /**
             标签选择器
             p{}
