--- a/html/view/csImport.html
+++ b/html/view/csImport.html
@@ -8,7 +8,7 @@
             color: blue;
         }
     </style>
-    <link rel="stylesheet" href="../cssImport.css">
+    <link rel="stylesheet" href="../css/cssImport.css">
 </head>
 <body>
     <div style="color: fuchsia">位置</div>
