--- a/html/css/cssImport.css
+++ b/html/css/cssImport.css
@@ -1,3 +1,17 @@
-p{
+p {
     color: aquamarine;
+}
+
+.left-fix {
+    float: left;
+}
+
+.right-fix {
+    float: right;
+}
+
+.clear-fix ::after {
+    clear: both;
+    content: '';
+    display: block;
 }
